test/ui/src/compile_fail/std/span_evt_kind.rs
#[emit::span("test", evt_kind: "custom")]
fn check() {}

fn main() {
    check();
}
